fix: fix all reviewer's notes unless profile info overflow

--- a/blocks/card/__image/card__image.css
+++ b/blocks/card/__image/card__image.css
@@ -5,4 +5,5 @@
   max-height: 282px;
   object-fit: cover;
   object-position: center;
+  vertical-align: bottom;
 }
