--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,8 +3,7 @@
   width: 68.75%;
   max-width: 880px;
   padding-bottom: 41px;
-  border-bottom: 1px solid #545454;
-  opacity: 0.7;
+  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
 
 @media screen and (max-width: 1023px) {
