--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -2,7 +2,6 @@
   position: relative;
   margin: auto;
   width: 430px;
-  max-height: 330px;
 }
 
 @media screen and (max-width: 569px) {
